Fixed icons overlapping on small windows

--- a/userChrome.css
+++ b/userChrome.css
@@ -21,8 +21,20 @@
 	top: 0;
 	left: 25%;
 	right: 25%;
+
+	@media (max-width: 1100px) {
+		left: 15%;
+		right: 15%;
+	}
+
+	@media (max-width: 800px) {
+		left: 30px;
+		right: 30px;
+	}
+
 	z-index: 1;
-	transition: top 0.3s cubic-bezier(0.270, 0.910, 0.435, 1.280), opacity 0.1s ease !important;
+	transition: top 0.3s cubic-bezier(0.270, 0.910, 0.435, 1.280),
+	opacity 0.1s ease !important;
 	border-top: none !important;
 	border-radius: 10px !important;
 	border: 1px solid var(--tab-selected-bgcolor) !important;
